<resources>
    <string name="app_name">Lunatics</string>
    <string name="action_load_more">Load more</string>
    <string name="default_page_welcome">Prompt welcome</string>
    <string name="default_game_date">2002–08-07</string>
    <string name="default_rating">Rating | 83</string>
    <string name="default_metacritic_rating">Metacritic | 76</string>
    <string name="popularGames">Popular game</string>
    <string name="newGames">New games</string>
    <string name="gamesToCome">Games to come</string>
    <string name="gamePlatforms">Platforms</string>
    <string name="gameGenres">Genres</string>
    <string name="actionOpen">Open</string>
    <string name="actionClose">Close</string>
    <string name="default_error">Unrecognized error during process</string>
    <string name="noMoreGames">The load limit for games is 50 :(</string>
    <string name="default_website">www.lunatics.io</string>
    <string name="default_platform">Stadia</string>
    <string name="action_see_same_lineup">Same series</string>
    <string name="action_trophy">Trophies</string>
    <string name="action_return">Go back</string>
    <string name="game_image">Main game image</string>
    <string name="title_activity_same_series">SameSeriesActivity</string>
    <string name="listPlatforms">Available on</string>
    <string name="seeAlso">See also</string>
    <string name="default_achievement">Reach for the stars</string>
    <string name="defaultAchievementDescription">Get 150 stars in every world</string>
    <string name="defaultAchievementPercentage">Success rate | 32.8%</string>
    <string name="gameDescriptionTitle">Description</string>
    <string name="defaultGameDescription">Lorem ipsum</string>
    <string name="title_activity_t_e_s_t">TEST</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="default_platform_dates">Released in 2002</string>
    <string name="default_game_count">5649 games</string>
    <string name="noMorePlatforms">The load limit for platforms is 50 :(</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_genre">Action</string>
</resources>