<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.SingleGameActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/gameImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_image_gallery" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/JacksonPurple" />

        <TextView
            android:id="@+id/gameName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:paddingLeft="16dp"
            android:text="@string/app_name"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/gameRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:paddingLeft="16dp"
            android:text="@string/default_rating"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/gameWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/default_website"
            android:textSize="16sp"
            app:drawableLeftCompat="@drawable/ic_web_pack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="15">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/gamePlatforms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/sameLineup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Malachite"
                    android:drawableLeft="@drawable/ic_sword"
                    android:text="@string/action_see_same_lineup"
                    android:textColor="@color/JacksonPurple" />

                <Button
                    android:id="@+id/game"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/Malachite"
                    android:drawableLeft="@drawable/ic_sparkles"
                    android:text="@string/action_trophy"
                    android:textColor="@color/JacksonPurple"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:backgroundTint="@color/SoftPink"
            android:drawableLeft="@drawable/ic_return"
            android:text="@string/action_return"
            android:textColor="@color/Cinnabar" />

    </LinearLayout>

</FrameLayout>